added some links

--- a/Primer-Design-in-Anopheles-gambiae.ipynb
+++ b/Primer-Design-in-Anopheles-gambiae.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "id": "AM9EeHef6tAD",
       "metadata": {
         "colab": {
@@ -56,7 +56,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "id": "528ae85d",
       "metadata": {
         "id": "528ae85d"
@@ -108,7 +108,7 @@
         "min_amplicon_size = 50        #@param {type:\"integer\"}\n",
         "max_amplicon_size = 100       #@param {type:\"integer\"}\n",
         "amplicon_size_range = [[min_amplicon_size, max_amplicon_size]]\n",
-        "n_primer_pairs = 5            #@param {type:\"slider\", min:1, max:20, step:1}\n",
+        "n_primer_pairs = 8            #@param {type:\"slider\", min:1, max:20, step:1}\n",
         "\n",
         "#@markdown    \n",
         "#@markdown target_loc is required for gDNA primers, and transcript required for qPCR primers.\n",
@@ -128,7 +128,7 @@
         "id": "SV03ewwc9de8"
       },
       "id": "SV03ewwc9de8",
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -138,12 +138,12 @@
         "id": "aa733775"
       },
       "source": [
-        "Load sequence data for chromosomal arm of choice, using the malariagen_data API:"
+        "Load sequence data for chromosomal arm of choice, using the [malariagen_data API](https://malariagen.github.io/vector-data/ag3/api.html):"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "id": "5fa0be8d",
       "metadata": {
         "id": "5fa0be8d",
@@ -175,12 +175,12 @@
         "id": "144a37ce"
       },
       "source": [
-        "Now we need to extract the bit of sequence we need. We will use functions in the agamPrimer package."
+        "Now we need to extract the bit of sequence we need. We will use functions in the [agamPrimer](https://pypi.org/project/agamPrimer/) package."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": null,
       "id": "R0CkEd38VXGY",
       "metadata": {
         "colab": {
@@ -232,7 +232,7 @@
         "outputId": "21b53963-5997-4f09-b093-b60e31e805a1"
       },
       "id": "nDaWXq7f9hyA",
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -261,7 +261,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": null,
       "id": "622ac6d9",
       "metadata": {
         "id": "622ac6d9"
@@ -313,7 +313,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": null,
       "id": "ae6e7525",
       "metadata": {
         "id": "ae6e7525",
@@ -336,7 +336,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": null,
       "id": "1bb40846",
       "metadata": {
         "colab": {
@@ -388,7 +388,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": null,
       "id": "bf8c5970",
       "metadata": {
         "colab": {
@@ -666,7 +666,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": null,
       "id": "09eQYSeT7lHG",
       "metadata": {
         "id": "09eQYSeT7lHG"
@@ -690,7 +690,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": null,
       "id": "61286685",
       "metadata": {
         "colab": {
@@ -735,7 +735,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": null,
       "id": "iSTRbVpxD3oy",
       "metadata": {
         "id": "iSTRbVpxD3oy",
@@ -1547,7 +1547,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": null,
       "id": "49ca7f2b",
       "metadata": {
         "id": "49ca7f2b"
@@ -1573,7 +1573,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": null,
       "id": "shXKBpG49LSU",
       "metadata": {
         "colab": {
@@ -1649,7 +1649,7 @@
         "outputId": "5541cda7-c2c2-4c08-9596-7ee808d7e93f"
       },
       "id": "cAacbw-q8Sgm",
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1667,7 +1667,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": null,
       "id": "0JA92ApBcxLo",
       "metadata": {
         "colab": {
