--- a/Primer-Design-in-Anopheles-gambiae.ipynb
+++ b/Primer-Design-in-Anopheles-gambiae.ipynb
@@ -2150,7 +2150,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3 (ipykernel)",
+      "display_name": "Python 3.7.12 ('base')",
       "language": "python",
       "name": "python3"
     },
@@ -2165,6 +2165,11 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.7.12"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "710100144729ec1057471750b60f3250df4296be7eb29e7e87fec32ed718ec4b"
+      }
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
