--- a/Primer-Design-in-Anopheles-gambiae.ipynb
+++ b/Primer-Design-in-Anopheles-gambiae.ipynb
@@ -20,7 +20,7 @@
       "outputs": [],
       "source": [
         "# First, install some packages we require\n",
-        "!pip install AgamPrimer==0.3.4 primer3-py malariagen_data -q "
+        "!pip install AgamPrimer==0.4.0 primer3-py malariagen_data kaleido -q "
       ]
     },
     {
@@ -38,7 +38,8 @@
         "import malariagen_data\n",
         "import numpy as np\n",
         "import primer3\n",
-        "import matplotlib.pyplot as plt"
+        "import matplotlib.pyplot as plt\n",
+        "import kaleido"
       ]
     },
     {
@@ -80,10 +81,10 @@
         "\n",
         "assay_type = 'gDNA primers + probe'           #@param [\"gDNA primers\", \"gDNA primers + probe\", \"probe\", \"qPCR primers\"]\n",
         "assay_name = 'vgsc-995f'        #@param {type:\"string\"}\n",
-        "min_amplicon_size = 190        #@param {type:\"integer\"}\n",
-        "max_amplicon_size = 210      #@param {type:\"integer\"}\n",
+        "min_amplicon_size = 60        #@param {type:\"integer\"}\n",
+        "max_amplicon_size = 120      #@param {type:\"integer\"}\n",
         "amplicon_size_range = [[min_amplicon_size, max_amplicon_size]]\n",
-        "n_primer_pairs = 8            #@param {type:\"slider\", min:1, max:20, step:1}\n",
+        "n_primer_pairs = 6            #@param {type:\"slider\", min:1, max:20, step:1}\n",
         "\n",
         "#@markdown    \n",
         "#@markdown target_loc is required for gDNA primers and probes, and transcript required for qPCR primers.\n",
@@ -91,7 +92,7 @@
         "\n",
         "target_loc =  '2422652'                #@param {type:\"string\"}\n",
         "target_loc = int(target_loc)\n",
-        "transcript =  'AGAP004707-RD'         #@param {type:\"string\"} \n",
+        "transcript =  'AGAP006227-RA'         #@param {type:\"string\"} \n",
         "\n",
         "\n",
         "if any(item in assay_type for item in ['gDNA', 'probe']):\n",
@@ -389,7 +390,7 @@
       "source": [
         "### **Plot allele frequencies in primers locations**\n",
         "\n",
-        "Now we can plot the primers pairs, and the frequency of any alternate alleles in the Ag1000g sample set of choice. When calculating allele frequencies, we will take the sum of all alternate alleles, as we are interested here in any mutations which are different from the reference genome. \n",
+        "Now we can plot the primers pairs, and the frequency of any alternate alleles in the Ag1000g sample set of choice. When calculating allele frequencies, we will take the sum of all alternate alleles, as we are interested here in any mutations which are different from the reference genome. We can see the frequencies of specific alleles by hovering over the points of the plot - in some cases it may be preferable to design degenerate primers rather than avoid a primer pair completely.\n",
         "\n",
         "We will also plot the primer Tm, GC and genomic spans of each primer binding site. We can use this plot to identify primers pairs and probes which may be suitable, particularly trying to avoid SNPs in the 3' end. "
       ]
