--- a/Primer-Design-in-Anopheles-gambiae.ipynb
+++ b/Primer-Design-in-Anopheles-gambiae.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/sanjaynagi/AgamPrimer/blob/main/Primer-Design-in-Anopheles-gambiae.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -20,7 +20,7 @@
       "outputs": [],
       "source": [
         "# First, install some packages we require\n",
-        "!pip install AgamPrimer==0.4.0 primer3-py malariagen_data kaleido -q "
+        "!pip install AgamPrimer==0.4.2 primer3-py malariagen_data kaleido -q "
       ]
     },
     {
@@ -71,8 +71,8 @@
       "execution_count": null,
       "id": "SV03ewwc9de8",
       "metadata": {
-        "id": "SV03ewwc9de8",
-        "cellView": "form"
+        "cellView": "form",
+        "id": "SV03ewwc9de8"
       },
       "outputs": [],
       "source": [
@@ -485,12 +485,12 @@
   ],
   "metadata": {
     "colab": {
+      "include_colab_link": true,
       "name": "Primer Design in Anopheles gambiae.ipynb",
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3 (ipykernel)",
+      "display_name": "Python 3.7.12 ('base')",
       "language": "python",
       "name": "python3"
     },
@@ -505,6 +505,11 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.7.12"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "710100144729ec1057471750b60f3250df4296be7eb29e7e87fec32ed718ec4b"
+      }
     }
   },
   "nbformat": 4,
