adding url link to notebook ag3()

--- a/Primer-Design-in-Anopheles-gambiae.ipynb
+++ b/Primer-Design-in-Anopheles-gambiae.ipynb
@@ -124,7 +124,7 @@
       "outputs": [],
       "source": [
         "# Connect to the malariagen_data ag3 API\n",
-        "ag3 = malariagen_data.Ag3() #pre=True\n",
+        "ag3 = malariagen_data.Ag3(url='gs://vo_agam_release/') #pre=True\n",
         "genome_seq = ag3.genome_sequence(region=contig)\n",
         "print(f\"Our genome sequence for {contig} is {genome_seq.shape[0]} bp long\")"
       ]
