--- a/workshop-6-module-4-AgamPrimer.ipynb
+++ b/workshop-6-module-4-AgamPrimer.ipynb
@@ -106,7 +106,7 @@
         "\n",
         "<center><img src=\"https://github.com/sanjaynagi/AgamPrimer/blob/main/graphics/teaching/extension.png?raw=1\" alt=\"denaturing\" width=500, height=175/></center>\n",
         "\n",
-        " **Repeat entire process for 25-40 cycles. After each cycle, the number of DNA molecular will approximately double**\n",
+        " **Repeat entire process for 25-40 cycles. After each cycle, the number of DNA molecules will approximately double**.\n",
         "\n"
       ]
     },
@@ -138,11 +138,11 @@
       "source": [
         "### **Quantitative PCR (Detection / Genotyping / Genotyping)**\n",
         "\n",
-        "In quantitative PCR, the concept is the same as standard PCR, but we measure the amount of DNA in the reaction at each cycle. To do this, we use either a fluorescent dye or fluorescent hybridisation probes, which emit light as the DNA concentration increases.\n",
+        "In quantitative PCR, the concept is the same as standard PCR, but we measure the amount of DNA in the reaction at each cycle. To do this, we use either a fluorescent dye or fluorescent hybridisation probes, which emit light as the DNA concentration increases. The number of cycles at which each sample passes a given threshold, is called the **Cq or Ct value**. By measuring fluorescense and determining Cq values, we can determine the amount of DNA template that was in the original sample.\n",
         "\n",
         "<center><img src=\"https://github.com/sanjaynagi/AgamPrimer/blob/main/graphics/teaching/realtimePCR.png?raw=1\" alt=\"pcr\" width=\"700\" height=\"300\"/></center>\n",
         "\n",
-        "The number of cycles at which each sample passes a given threshold, is called the **Cq or Ct value**. By measuring fluorescense and determining Cq values, we can determine the amount of DNA template that was in the original sample. \n",
+        "\n",
         "\n",
         "### SYBR green\n",
         "\n",
@@ -595,18 +595,6 @@
       "source": [
         "seq_parameters['SEQUENCE_TEMPLATE']"
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "seq_paramte"
-      ],
-      "metadata": {
-        "id": "1R1QWgW6M52U"
-      },
-      "id": "1R1QWgW6M52U",
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -2628,12 +2616,12 @@
         "                                   save=False)"
       ],
       "metadata": {
-        "id": "hKugtREjGU8-",
-        "outputId": "72ee242d-1b6f-460c-dd4d-c28af77f6364",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "hKugtREjGU8-",
+        "outputId": "72ee242d-1b6f-460c-dd4d-c28af77f6364"
       },
       "id": "hKugtREjGU8-",
       "execution_count": 20,
