remove ace1 figure

--- a/workshop-6-module-4-AgamPrimer.ipynb
+++ b/workshop-6-module-4-AgamPrimer.ipynb
@@ -238,13 +238,7 @@
         "\n",
         "## Designing primers for the *ace1*-280S mutation\n",
         "\n",
-        "In the rest of this module, we will design primers and probes for the *ace1*-280S mutation (previously *ace1*-119S). This mutation is known to be important in resistance to organophosphates and carbamates, insecticides which are widely used in indoor residual spraying (IRS). The resistance mutation has spread throughout much of west and central Africa, including introgressing from *An. gambiae* to *An. coluzzii*, and is often found on the background of large duplications which often pair wild-type and mutant alleles <sup>[11]</sup>. We see very large signals of selection at this locus in many contemporary populations of *An. gambiae*. \n",
-        "<!-- \n",
-        "\n",
-        "<figure style=\"width: 800px;\">\n",
-        "    <img src=\"https://github.com/sanjaynagi/AgamPrimer/blob/main/graphics/teaching/ace1.png?raw=1\" alt=\"Drawing\"/>\n",
-        "    <figcaption>Combination of Ace1 genotypes and CNVs, taken from Grau-Bove et al.<sup>[6]</sup></figcaption>\n",
-        "</figure> -->\n"
+        "In the rest of this module, we will design primers and probes for the *ace1*-280S mutation (previously *ace1*-119S). This mutation is known to be important in resistance to organophosphates and carbamates, insecticides which are widely used in indoor residual spraying (IRS). The resistance mutation has spread throughout much of west and central Africa, including introgressing from *An. gambiae* to *An. coluzzii*, and is often found on the background of large duplications which often pair wild-type and mutant alleles <sup>[11]</sup>. We see very large signals of selection at this locus in many contemporary populations of *An. gambiae*. "
       ]
     },
     {
@@ -570,11 +564,11 @@
         "seq_parameters"
       ],
       "metadata": {
-        "id": "d7JYKNXW1zla",
-        "outputId": "1f8a39e9-e3f9-4204-f4be-08da01d88d4c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "d7JYKNXW1zla",
+        "outputId": "1f8a39e9-e3f9-4204-f4be-08da01d88d4c"
       },
       "id": "d7JYKNXW1zla",
       "execution_count": 43,
@@ -1915,11 +1909,11 @@
         "metadata.columns"
       ],
       "metadata": {
-        "id": "I6MEculr4OFi",
-        "outputId": "9874c6e7-869e-4b5d-8b8e-60f36397fc77",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "I6MEculr4OFi",
+        "outputId": "9874c6e7-869e-4b5d-8b8e-60f36397fc77"
       },
       "id": "I6MEculr4OFi",
       "execution_count": 51,
