--- a/Primer-Design-in-Anopheles-gambiae.ipynb
+++ b/Primer-Design-in-Anopheles-gambiae.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/sanjaynagi/AgamPrimer/blob/main/Primer-Design-in-Anopheles-gambiae.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -20,15 +20,16 @@
       "outputs": [],
       "source": [
         "# First, install some packages we require\n",
-        "!pip install AgamPrimer==0.5.1 primer3-py malariagen_data kaleido gget -q "
+        "!pip install AgamPrimer==0.5.4 primer3-py malariagen_data kaleido gget -q "
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "528ae85d",
       "metadata": {
-        "id": "528ae85d"
+        "id": "528ae85d",
+        "outputId": "85ec2dff-212a-4d07-bf41-f594b3f7c930"
       },
       "outputs": [
         {
@@ -77,7 +78,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "id": "SV03ewwc9de8",
       "metadata": {
         "cellView": "form",
@@ -125,10 +126,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "id": "5fa0be8d",
       "metadata": {
-        "id": "5fa0be8d"
+        "id": "5fa0be8d",
+        "outputId": "26b2edee-5091-4a79-9493-2031ad872b68"
       },
       "outputs": [
         {
@@ -166,10 +168,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "id": "R0CkEd38VXGY",
       "metadata": {
-        "id": "R0CkEd38VXGY"
+        "id": "R0CkEd38VXGY",
+        "outputId": "5731d4c3-f2d0-4bfb-d988-ce87da7e3477"
       },
       "outputs": [
         {
@@ -202,10 +205,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "id": "nDaWXq7f9hyA",
       "metadata": {
-        "id": "nDaWXq7f9hyA"
+        "id": "nDaWXq7f9hyA",
+        "outputId": "8a4412f6-5753-4fa8-8ec0-95c06db79a90"
       },
       "outputs": [
         {
@@ -235,7 +239,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "id": "622ac6d9",
       "metadata": {
         "id": "622ac6d9"
@@ -243,7 +247,6 @@
       "outputs": [],
       "source": [
         "primer_parameters  =  {\n",
-        "        'PRIMER_NUM_RETURN':n_primer_pairs,\n",
         "        'PRIMER_OPT_SIZE': 20,\n",
         "        'PRIMER_TASK':'generic',\n",
         "        'PRIMER_MIN_SIZE': 17,\n",
@@ -253,7 +256,6 @@
         "        'PRIMER_MAX_TM': 63.0,\n",
         "        'PRIMER_MIN_GC': 30.0,\n",
         "        'PRIMER_MAX_GC': 75.0,\n",
-        "        'PRIMER_PRODUCT_SIZE_RANGE': amplicon_size_range,\n",
         "        'PRIMER_MIN_THREE_PRIME_DISTANCE':3,          # this parameter is the minimum distance between successive pairs. If 1, it means successive primer pairs could be identical bar one base shift\n",
         "        'PRIMER_INTERNAL_OPT_SIZE': 16,               # Probe size preferences if selected, otherwise ignored\n",
         "        'PRIMER_INTERNAL_MIN_SIZE': 10,\n",
@@ -264,7 +266,7 @@
         "        # In the same format as above                       \n",
         "    }\n",
         "\n",
-        "primer_parameters = AgamPrimer.primer_params(primer_parameters, assay_type) ## adds some parameters depending on assay type"
+        "primer_parameters = AgamPrimer.primer_params(primer_parameters, assay_type, n_primer_pairs, amplicon_size_range) ## adds some parameters depending on assay type"
       ]
     },
     {
@@ -279,7 +281,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "id": "ae6e7525",
       "metadata": {
         "id": "ae6e7525",
@@ -302,10 +304,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "id": "1bb40846",
       "metadata": {
-        "id": "1bb40846"
+        "id": "1bb40846",
+        "outputId": "fcc83c10-5e82-4b93-82ed-f098a359aaf5"
       },
       "outputs": [
         {
@@ -341,10 +344,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "id": "bf8c5970",
       "metadata": {
-        "id": "bf8c5970"
+        "id": "bf8c5970",
+        "outputId": "0715158b-2442-45bf-c972-27baef35dba1"
       },
       "outputs": [
         {
@@ -542,7 +546,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "id": "49ca7f2b",
       "metadata": {
         "id": "49ca7f2b"
@@ -569,10 +573,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "id": "shXKBpG49LSU",
       "metadata": {
-        "id": "shXKBpG49LSU"
+        "id": "shXKBpG49LSU",
+        "outputId": "bd49b2fb-3c5d-4939-d32c-54dcaa0775d5"
       },
       "outputs": [
         {
@@ -3852,10 +3857,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "id": "cAacbw-q8Sgm",
       "metadata": {
-        "id": "cAacbw-q8Sgm"
+        "id": "cAacbw-q8Sgm",
+        "outputId": "35a8c73c-d446-49ec-a0da-94d6acedb369"
       },
       "outputs": [
         {
@@ -3884,10 +3890,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "id": "0JA92ApBcxLo",
       "metadata": {
-        "id": "0JA92ApBcxLo"
+        "id": "0JA92ApBcxLo",
+        "outputId": "d9ac849d-bcaa-41aa-a654-e2bea3910549"
       },
       "outputs": [
         {
@@ -4015,10 +4022,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "id": "zP4LB2bQBgGg",
       "metadata": {
-        "id": "zP4LB2bQBgGg"
+        "id": "zP4LB2bQBgGg",
+        "outputId": "d62052a4-8f58-4fc2-f640-703fcf26a98e"
       },
       "outputs": [
         {
@@ -4245,9 +4253,9 @@
   ],
   "metadata": {
     "colab": {
-      "include_colab_link": true,
       "name": "Primer Design in Anopheles gambiae.ipynb",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
