--- a/Primer-Design-in-Anopheles-gambiae.ipynb
+++ b/Primer-Design-in-Anopheles-gambiae.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/sanjaynagi/AgamPrimer/blob/main/Primer-Design-in-Anopheles-gambiae.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -20,7 +20,7 @@
       "outputs": [],
       "source": [
         "# First, install some packages we require\n",
-        "!pip install AgamPrimer==0.5.4 primer3-py malariagen_data kaleido gget -q "
+        "!pip install AgamPrimer==0.5.5 primer3-py malariagen_data kaleido gget -q "
       ]
     },
     {
@@ -511,9 +511,9 @@
   ],
   "metadata": {
     "colab": {
+      "include_colab_link": true,
       "name": "Primer Design in Anopheles gambiae.ipynb",
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
