change save parameter to out_dir

--- a/notebooks/Primer-Design-in-Anopheles-gambiae.ipynb
+++ b/notebooks/Primer-Design-in-Anopheles-gambiae.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/sanjaynagi/AgamPrimer/blob/main/notebooks/Primer-Design-in-Anopheles-gambiae.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -20,7 +20,7 @@
       "outputs": [],
       "source": [
         "# First, install some packages we require\n",
-        "!pip install AgamPrimer==0.5.7 -q "
+        "! pip install AgamPrimer -q "
       ]
     },
     {
@@ -411,7 +411,7 @@
         "    sample_query=sample_query,\n",
         "    assay_type=assay_type,\n",
         "    seq_parameters=seq_parameters,\n",
-        "    save=True\n",
+        "    out_dir=\".\"\n",
         ")"
       ]
     },
@@ -441,7 +441,8 @@
         "    gff=ag3.geneset(), \n",
         "    contig=contig, \n",
         "    seq_parameters=seq_parameters, \n",
-        "    legend_loc='lower left'\n",
+        "    legend_loc='lower left',\n",
+        "    out_dir=\".\",\n",
         ")"
       ]
     },
@@ -489,16 +490,22 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### **Alternative all-in-one function**"
-      ],
+      "id": "dRflsODz83tW",
       "metadata": {
         "id": "dRflsODz83tW"
       },
-      "id": "dRflsODz83tW"
+      "source": [
+        "### **Alternative all-in-one function**"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "fiakkk2m7RsS",
+      "metadata": {
+        "id": "fiakkk2m7RsS"
+      },
+      "outputs": [],
       "source": [
         "primer_df, blat_df = AgamPrimer.designPrimers(assay_type='gDNA primers + probe',  # assay_type options are: 'qPCR primers', 'gDNA primers', 'gDNA primers + probe', 'probe'\n",
         "                                   target=2422652 ,#'AGAP000818-RA',            # target should be an AGAP transcript identifier in for qPCR, otherwise should be an integer in genome\n",
@@ -509,14 +516,8 @@
         "                                   max_amplicon_size=120,\n",
         "                                   primer_parameters=\"default\",\n",
         "                                   sample_set=['AG1000G-BF-A', 'AG1000G-GH', 'AG1000G-GN-A'],\n",
-        "                                   save=False)"
-      ],
-      "metadata": {
-        "id": "fiakkk2m7RsS"
-      },
-      "id": "fiakkk2m7RsS",
-      "execution_count": null,
-      "outputs": []
+        "                                   out_dir=\".\")"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -555,9 +556,9 @@
   ],
   "metadata": {
     "colab": {
+      "include_colab_link": true,
       "name": "Primer Design in Anopheles gambiae.ipynb",
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
