--- a/notebooks/AgamPrimer-long.ipynb
+++ b/notebooks/AgamPrimer-long.ipynb
@@ -3,11 +3,11 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/sanjaynagi/AgamPrimer/blob/main/notebooks/Primer-Design-in-Anopheles-gambiae.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/sanjaynagi/AgamPrimer/blob/main/notebooks/AgamPrimer-long.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -306,8 +306,8 @@
       },
       "outputs": [],
       "source": [
-        "primer_df.to_csv(f\"{assay_name}.{assay_type}.primers.tsv\", sep=\"\\t\")\n",
-        "primer_df.to_excel(f\"{assay_name}.{assay_type}.primers.xlsx\")"
+        "primer_df.to_csv(f\"{assay_name}.{assay_type}.tsv\", sep=\"\\t\")\n",
+        "primer_df.to_excel(f\"{assay_name}.{assay_type}.xlsx\")"
       ]
     },
     {
@@ -556,9 +556,9 @@
   ],
   "metadata": {
     "colab": {
-      "include_colab_link": true,
       "name": "Primer Design in Anopheles gambiae.ipynb",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
