changing use of qPCR to cDNA

--- a/notebooks/AgamPrimer-long.ipynb
+++ b/notebooks/AgamPrimer-long.ipynb
@@ -80,7 +80,7 @@
         "#@title **Selecting Primer Parameters** { run: \"auto\" }\n",
         "#@markdown In the below cells, replace the values with those desired for your primers.\n",
         "\n",
-        "assay_type = 'qPCR primers'           #@param [\"gDNA primers\", \"gDNA primers + probe\", \"probe\", \"qPCR primers\"]\n",
+        "assay_type = 'cDNA primers'           #@param [\"gDNA primers\", \"gDNA primers + probe\", \"probe\", \"cDNA primers\"]\n",
         "assay_name = 'ugt222'        #@param {type:\"string\"}\n",
         "min_amplicon_size = 60        #@param {type:\"integer\"}\n",
         "max_amplicon_size = 120      #@param {type:\"integer\"}\n",
@@ -88,7 +88,7 @@
         "n_primer_pairs = 6            #@param {type:\"slider\", min:1, max:20, step:1}\n",
         "\n",
         "#@markdown    \n",
-        "#@markdown target_loc is required for gDNA primers and probes, and transcript required for qPCR primers.\n",
+        "#@markdown target_loc is required for gDNA primers and probes, and transcript required for cDNA primers.\n",
         "contig =  \"2L\"                #@param ['2L', '2R', '3L', '3R', 'X']\n",
         "\n",
         "target_loc =  '0 '                #@param {type:\"string\"}\n",
@@ -98,7 +98,7 @@
         "\n",
         "if any(item in assay_type for item in ['gDNA', 'probe']):\n",
         "  assert target_loc > 0, \"Target location must be above 0 and less than the contig length\"\n",
-        "elif assay_type == 'qPCR primers':\n",
+        "elif assay_type == 'cDNA primers':\n",
         "  assert len(transcript) > 2, \"Transcript ID is not valid, should be vectorbase ID such as 'AGAP004707-RD'\""
       ]
     },
@@ -149,7 +149,7 @@
         "if any(item in assay_type for item in ['gDNA', 'probe']):\n",
         "  # genomic DNA\n",
         "  target_sequence, gdna_pos, seq_parameters = AgamPrimer.prepare_gDNA_sequence(target_loc=target_loc, amplicon_size_range=amplicon_size_range, genome_seq=genome_seq, assay_name=assay_name, assay_type=assay_type)\n",
-        "elif assay_type == 'qPCR primers':\n",
+        "elif assay_type == 'cDNA primers':\n",
         "  # quantitative PCR \n",
         "  target_sequence, exon_junctions, gdna_pos, seq_parameters = AgamPrimer.prepare_cDNA_sequence(transcript=transcript, gff=ag3.geneset(), genome_seq=genome_seq, assay_name=assay_name)"
       ]
@@ -507,7 +507,7 @@
       },
       "outputs": [],
       "source": [
-        "primer_df, blat_df = AgamPrimer.designPrimers(assay_type='gDNA primers + probe',  # assay_type options are: 'qPCR primers', 'gDNA primers', 'gDNA primers + probe', 'probe'\n",
+        "primer_df, blat_df = AgamPrimer.designPrimers(assay_type='gDNA primers + probe',  # assay_type options are: 'cDNA primers', 'gDNA primers', 'gDNA primers + probe', 'probe'\n",
         "                                   target=2422652 ,#'AGAP000818-RA',            # target should be an AGAP transcript identifier in for qPCR, otherwise should be an integer in genome\n",
         "                                   assay_name='chrom_x_region',\n",
         "                                   contig='2L',\n",
