--- a/notebooks/workshop-6-module-4-AgamPrimer.ipynb
+++ b/notebooks/workshop-6-module-4-AgamPrimer.ipynb
@@ -53,7 +53,7 @@
         "- Describe some of the applications of PCR in vector control.\n",
         "- Explain why it is important to consider SNPs when designing primers.\n",
         "- Design genomic DNA primers to target the *ace1*-G280S mutation.\n",
-        "- Design RT-qPCR primers to measure gene expression of the carboxylesterase, COEAE2F."
+        "- Design RT-cDNA primers to measure gene expression of the carboxylesterase, COEAE2F."
       ]
     },
     {
@@ -299,7 +299,7 @@
         "#@title **Selecting Primer Parameters** { run: \"auto\" }\n",
         "#@markdown In the below cells, replace the values with those desired for your primers.\n",
         "\n",
-        "assay_type = \"gDNA primers + probe\"           #@param [\"gDNA primers\", \"gDNA primers + probe\", \"probe\", \"qPCR primers\"]\n",
+        "assay_type = \"gDNA primers + probe\"           #@param [\"gDNA primers\", \"gDNA primers + probe\", \"probe\", \"cDNA primers\"]\n",
         "assay_name = 'ace1-280s'                            #@param {type:\"string\"}\n",
         "min_amplicon_size = 60                        #@param {type:\"integer\"}\n",
         "max_amplicon_size = 120                       #@param {type:\"integer\"}\n",
@@ -307,7 +307,7 @@
         "n_primer_pairs = 6                            #@param {type:\"slider\", min:1, max:20, step:1}\n",
         "\n",
         "#@markdown    \n",
-        "#@markdown target_loc is required for gDNA primers and probes, and transcript required for qPCR primers.\n",
+        "#@markdown target_loc is required for gDNA primers and probes, and transcript required for cDNA primers.\n",
         "contig =  \"2R\"                                 #@param ['2L', '2R', '3L', '3R', 'X']\n",
         "\n",
         "target_loc =  '3492074'                       #@param {type:\"string\"}\n",
@@ -317,7 +317,7 @@
         "\n",
         "if any(item in assay_type for item in ['gDNA', 'probe']):\n",
         "  assert target_loc > 0, \"Target location must be above 0 and less than the contig length\"\n",
-        "elif assay_type == 'qPCR primers':\n",
+        "elif assay_type == 'cDNA primers':\n",
         "  assert len(transcript) > 2, \"Transcript ID is not valid, should be vectorbase ID such as 'AGAP004707-RD'\""
       ]
     },
@@ -482,9 +482,9 @@
         "id": "144a37ce"
       },
       "source": [
-        "Now we need to extract the bit of genome sequence we need. We will use functions in the [AgamPrimer](https://pypi.org/project/AgamPrimer/) package. For genomic DNA primers, this is quite simple and we can make direct use of the `ag3.genome_sequence()` function, but for cDNA qPCR primers, we must only include coding sequence, and so we must concatenate exons together.\n",
+        "Now we need to extract the bit of genome sequence we need. We will use functions in the [AgamPrimer](https://pypi.org/project/AgamPrimer/) package. For genomic DNA primers, this is quite simple and we can make direct use of the `ag3.genome_sequence()` function, but for cDNA cDNA primers, we must only include coding sequence, and so we must concatenate exons together.\n",
         "\n",
-        "With qPCR primers for cDNA, we also must ensure that one primer spans an exon-exon junction, to ensure that any residual genomic DNA in our samples does not get amplified. We must therefore make a note of where the exon junctions are, and we store that as a list in the `exon_junctions` variable."
+        "With cDNA primers for cDNA, we also must ensure that one primer spans an exon-exon junction, to ensure that any residual genomic DNA in our samples does not get amplified. We must therefore make a note of where the exon junctions are, and we store that as a list in the `exon_junctions` variable."
       ]
     },
     {
@@ -512,7 +512,7 @@
         "if any(item in assay_type for item in ['gDNA', 'probe']):\n",
         "  # genomic DNA\n",
         "  target_sequence, gdna_pos, seq_parameters = AgamPrimer.prepare_gDNA_sequence(target_loc=target_loc, amplicon_size_range=amplicon_size_range, genome_seq=genome_seq, assay_name=assay_name, assay_type=assay_type)\n",
-        "elif assay_type == 'qPCR primers':\n",
+        "elif assay_type == 'cDNA primers':\n",
         "  # RT-quantitative PCR, cDNA\n",
         "  target_sequence, exon_junctions, gdna_pos, seq_parameters = AgamPrimer.prepare_cDNA_sequence(transcript=transcript, gff=ag3.geneset(), genome_seq=genome_seq, assay_name=assay_name)"
       ]
@@ -2605,7 +2605,7 @@
       "source": [
         "### An example of primers to avoid\n",
         "\n",
-        "In the above *ace1* example, all of the primer pairs look reasonable. Lets have a look at an example where some of the primers do not look so good. A UGT detoxification gene, AGAP006222, is overexpressed very highly in populations of *An. coluzzii* - lets try and design some qPCR primers to measure its expression. The below `AgamPrimer.designPrimers()` function integrates the entire notebook into one function, for convenience."
+        "In the above *ace1* example, all of the primer pairs look reasonable. Lets have a look at an example where some of the primers do not look so good. A UGT detoxification gene, AGAP006222, is overexpressed very highly in populations of *An. coluzzii* - lets try and design some cDNA primers to measure its expression. The below `AgamPrimer.designPrimers()` function integrates the entire notebook into one function, for convenience."
       ]
     },
     {
@@ -2717,7 +2717,7 @@
         "    }\n",
         "\n",
         "\n",
-        "primer_df, blat_df = AgamPrimer.designPrimers(assay_type='qPCR primers',              # assay_type options are: 'qPCR primers', 'gDNA primers', 'gDNA primers + probe', 'probe'\n",
+        "primer_df, blat_df = AgamPrimer.designPrimers(assay_type='cDNA primers',              # assay_type options are: 'cDNA primers', 'gDNA primers', 'gDNA primers + probe', 'probe'\n",
         "                                   target='AGAP006222-RA',                            # target should be an AGAP transcript identifier in for qPCR, otherwise should be an integer in genome\n",
         "                                   assay_name='UGT_222',\n",
         "                                   contig='2L',\n",
@@ -2756,11 +2756,11 @@
         "\n",
         "For the exercises, you can either re-run this notebook or use the function in the cell above, which integrates the above notebook into one single function, for convenience.\n",
         "\n",
-        "**1)** Design a set of qPCR primers to measure gene expression of the carboxylesterase gene, COEAE2F (contig='2L', transcript='AGAP006228-RA'), restricting the samples to just *Anopheles gambiae*.\n",
+        "**1)** Design a set of cDNA primers to measure gene expression of the carboxylesterase gene, COEAE2F (contig='2L', transcript='AGAP006228-RA'), restricting the samples to just *Anopheles gambiae*.\n",
         "\n",
         "**2)** Design a set of primers and a probe for the *vgsc*-995F *kdr* mutation (contig = 2L, genome bp = 2422652)\n",
         "\n",
-        "**3)** Design a set of qPCR primers to target the gene from module 3's practical exercise. \n",
+        "**3)** Design a set of cDNA primers to target the gene from module 3's practical exercise. \n",
         "\n"
       ]
     },
@@ -2794,7 +2794,7 @@
         "    }\n",
         "\n",
         "\n",
-        "# primer_df, blat_df = AgamPrimer.designPrimers(assay_type='gDNA primers + probe',  # assay_type options are: 'qPCR primers', 'gDNA primers', 'gDNA primers + probe', 'probe'\n",
+        "# primer_df, blat_df = AgamPrimer.designPrimers(assay_type='gDNA primers + probe',  # assay_type options are: 'cDNA primers', 'gDNA primers', 'gDNA primers + probe', 'probe'\n",
         "#                                    target=9_500_000 ,#'AGAP000818-RA',            # target should be an AGAP transcript identifier in for qPCR, otherwise should be an integer in genome\n",
         "#                                    assay_name='vgsc',\n",
         "#                                    contig='X',\n",
