--- a/notebooks/AgamPrimer-short.ipynb
+++ b/notebooks/AgamPrimer-short.ipynb
@@ -93,7 +93,7 @@
       },
       "outputs": [],
       "source": [
-        "primer_df, blat_df = AgamPrimer.designPrimers(assay_type='gDNA primers + probe',  # assay_type options are: 'qPCR primers', 'gDNA primers', 'gDNA primers + probe', 'probe'\n",
+        "primer_df, blat_df = AgamPrimer.designPrimers(assay_type='gDNA primers + probe',  # assay_type options are: 'cDNA primers', 'gDNA primers', 'gDNA primers + probe', 'probe'\n",
         "                                   target=2422652 ,                               #'AGAP000818-RA' target should be an AGAP transcript identifier for qPCR, otherwise should be an integer in genome\n",
         "                                   assay_name='vgsc-995f',\n",
         "                                   contig='2L',\n",
