correcting last cell

--- a/notebooks/AgamPrimer-long.ipynb
+++ b/notebooks/AgamPrimer-long.ipynb
@@ -509,7 +509,7 @@
       "source": [
         "primer_df, blat_df = AgamPrimer.designPrimers(assay_type='gDNA primers + probe',  # assay_type options are: 'cDNA primers', 'gDNA primers', 'gDNA primers + probe', 'probe'\n",
         "                                   target=2422652 ,#'AGAP000818-RA',            # target should be an AGAP transcript identifier in for qPCR, otherwise should be an integer in genome\n",
-        "                                   assay_name='chrom_x_region',\n",
+        "                                   assay_name='vgsc-995f',\n",
         "                                   contig='2L',\n",
         "                                   n_primer_pairs=5,\n",
         "                                   min_amplicon_size=60,\n",
